<resources>
    <string name="app_name">IKT Apps</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_my_account">My Account</string>
    <string name="action_notif">Notification</string>
    <string name="action_language">Languange</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_signout">Sign Out</string>

    <string name="indonesia">Bahasa Indonesia</string>
    <string name="english">English</string>

    <!--LIST MENU LEFT-->
    <!--"CREATE ANNOUNCEMENT", "ENTRY TICKET", "TRUCK ACTIVITY", "INBOX", "DRIVER"-->
    <string name="home">HOME</string>
    <string name="create_announcement">CREATE ANNOUNCEMENT</string>
    <string name="entry_ticket">ENTRY TICKET</string>
    <string name="truck_activity">TRUCK ACTIVITY</string>
    <string name="inbox">INBOX</string>
    <string name="driver">DRIVER</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="setting">SETTING</string>
    <string-array name="menu_left_drawer">
        <item>@string/create_announcement</item>
        <item>@string/entry_ticket</item>
        <item>@string/truck_activity</item>
        <item>@string/inbox</item>
        <item>@string/driver</item>
    </string-array>
    <string-array name="title_main_menu">
        <item>@string/create_announcement</item>
        <item>@string/entry_ticket</item>
        <item>@string/truck_activity</item>
        <item>@string/inbox</item>
        <item>@string/driver</item>
        <item>@string/my_account</item>
    </string-array>
    <integer-array name="icon_main_menu">
        <item>@drawable/announcement</item>
        <item>@drawable/tiket</item>
        <item>@drawable/activity</item>
        <item>@drawable/inbox</item>
        <item>@drawable/driver</item>
        <item>@drawable/myaccount</item>
    </integer-array>

    <string-array name="list_menu_setting">
        <item>@string/action_my_account</item>
        <item>@string/action_notif</item>
        <item>@string/action_language</item>
        <item>@string/action_signout</item>
    </string-array>

    <string name="show_pwd">Show Password</string>
    <string name="truck">TRUCK</string>
    <string name="announcement">ANNOUNCEMENT</string>
    <string name="confirm_announcement">Confirm Announcement</string>
    <string name="mobile_apps">mobile apps</string>
    <string name="ind_logistic">INDONESIA LOGISTIC</string>
    <string name="comm_service">COMMUNITY SERVICE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="company">Company</string>
    <string name="unassign_ticket">Unassigned Entry Ticket</string>
    <string name="assign_ticket">Assigned Entry Ticket</string>
    <string name="status_truck_update">Status Truck Update</string>
    <string name="operation">Operation</string>
    <string name="complete">Complete</string>
    <string name="left">Left</string>
    <string name="inbox_setting">Inbox</string>
    <string name="login">LOGIN</string>
    <string name="driver_name">Driver\'s Name</string>
    <string name="driver_phone">Driver\'s Phone</string>
    <string name="truck_plat_no">Truck\'s Plate Number</string>
    <string name="change_pwd">Change Password</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="backload">Backload</string>
    <string name="international">International</string>
    <string name="domestic">Domestic</string>
    <string name="add_driver">Add Driver</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="identity_no">Identity Card</string>
    <string name="license_no">License Number</string>
    <string name="conf_pwd">Confirm Password</string>
    <string name="create_driver">Create Driver</string>
    <string name="edit_driver">Edit Driver</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="amount_of_vins">Amount of Vins</string>
    <string name="trip_no">Trip Number</string>
    <string name="choose_time_slot">Choose time slot</string>
    <string name="choose_license_type">Choose license type</string>
    <string name="put_vins_no">Input VINs</string>
    <string name="put_trip_no">Trip Number</string>
    <string name="put_trip_no_button">Trip Number or Capacity</string>
    <string name="or">OR</string>
    <string name="truck_capacity">Truck Capacity</string>
    <string name="network_timeout">Connection Timeout</string>
    <string name="download_failed">Download Failed</string>
    <string name="request_aborted">Request Aborted</string>
    <string name="are_you_sure_logout">Are sure want to sign out?</string>
    <string name="are_you_sure_delete">Are sure want to delete?</string>
    <string name="terminal">Terminal</string>
    <string name="timeslot_title">Time Slot</string>
    <string name="available">Available</string>
    <string name="not_match">Not Match</string>
    <string name="add">+</string>
    <string name="min">-</string>

    <string name="mandatory_username">* Username</string>
    <string name="mandatory_password">* Password</string>
    <string name="mandatory_name">* Name</string>
    <string name="mandatory_phone_number">* Phone Number</string>
    <string name="mandatory_identity_no">* Identity Card</string>
    <string name="mandatory_license_no">* License Number</string>
    <string name="mandatory_conf_pwd">* Confirm Password</string>

    <!-- LOADING TEXT -->
    <string name="loading_processing">Processing&#8230; </string>
    <string name="loading_load">Loading&#8230; </string>
    <string name="loading_update">Checking update&#8230; </string>
    <string name="loading_please_wait">Please Wait&#8230; </string>
    <string name="loading_registering">Registering&#8230; </string>
    <string name="loading_registering_push_fail">Register Push Fail&#8230; </string>
    <string name="loading_unregistering">Unregistering&#8230; </string>
    <string name="loading_retrieve_userprofile">Retrieve Profile&#8230; </string>
    <string name="loading_saving">Saving&#8230; </string>
    <!-- LOADING TEXT] -->



    <string name="label_carrier">Carrier</string>
    <string name="label_transport_mode">Transport Mode</string>
    <string name="label_driver">Driver</string>
    <string name="label_license_plat">License Plat</string>
    <string name="label_type">Type</string>
    <string name="label_outgoing_voy_nr">Outgoing Voy Nr</string>
    <string name="label_outgoing_vessel">Outgoing Vessel</string>
    <string name="label_time_begin">Time Begin</string>
    <string name="label_time_end">Time End</string>
    <string name="label_load_lanes">Load Lanes In</string>
    <string name="label_load_lanes_out">Load Lanes Out</string>
    <string name="label_amount_of_car_to_pickup">Amount of Car to Pickup</string>
    <string name="label_amount_of_car_to_vessel">Amount of Car to Vessel</string>
    <string name="label_colon">:</string>
    <string name="label_detail_truck_status">Detail Truck Status</string>

    <string name="label_plat_no">License No</string>
    <string name="label_driver_active">Active Driver</string>
    <string name="label_description">Description</string>

    <string name="label_activity_list">Activity List</string>
    <string name="label_via_web">Via Web Portal</string>
    <string name="label_via_mobile">Via Mobile</string>

    <string name="label_ANNOUNCE">Announced</string>
    <string name="label_OPERATION">Operational</string>
    <string name="label_COMPLETE">Completed</string>
    <string name="label_LEFT">Left</string>

    <string name="restart_application">Application needs to restart after changed the language?</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>


    <!-- ERROR MSG -->
    <string name="mandatory">Mandatory</string>
    <string name="err_message_password_should_be_same">New password and Confirm passsword should equals</string>
    <string name="err_message_password_should_be_required">Please enter all required field</string>

    <string name="success_message_change_password">Change password is success</string>
    <string name="success_message_delete_driver">Delete Driver is success</string>

    <!-- ERROR MSG -->
    <string name="confirm_delete">Are you sure want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="announce_vin">Do you want to register for this VIN in Cartos ?</string>
    <string name="vin_can_not_twice">Vin cannot add more than 1</string>

</resources>
