<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.ikt.main.to.component.MaterialEditText
                android:id="@+id/edtDriverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/driver_name"
                android:inputType="text"
                android:textCursorDrawable="@drawable/text_cursor"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true" />

            <com.ikt.main.to.component.MaterialEditText
                android:id="@+id/edtDriverPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:focusableInTouchMode="true"
                android:hint="@string/driver_phone"
                android:inputType="phone"
                android:textCursorDrawable="@drawable/text_cursor"
                android:visibility="gone"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true" />

            <com.ikt.main.to.component.MaterialEditText
                android:id="@+id/edtPlatNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/truck_plat_no"
                android:inputType="text"
                android:textCursorDrawable="@drawable/text_cursor"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_button_blue"
                    android:text="@string/change_pwd"
                    android:textAllCaps="false"
                    android:visibility="gone"
                    android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:text="@string/terminal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/border_blue_drawable">

                <RadioGroup
                    android:id="@+id/rdGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rdInternational"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/radionButtonCustom"
                        android:checked="true"
                        android:paddingLeft="5dp"
                        android:text="@string/international"
                        android:textSize="12sp"/>

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rdDomestic"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/radionButtonCustom"
                        android:paddingLeft="5dp"
                        android:text="@string/domestic"
                        android:textSize="12sp"/>
                </RadioGroup>
            </RelativeLayout>

                <Button
                    android:id="@+id/btnIncoming"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_button_dark"
                    android:text="@string/incoming"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />



                <Button
                    android:id="@+id/btnOutgoing"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_button_dark"
                    android:text="@string/outgoing"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnBackload"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_button_red"
                    android:text="@string/backload"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>