<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.ikt.main.to.component.MaterialEditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="30dp"
                android:focusableInTouchMode="true"
                android:hint="@string/mandatory_username"
                android:inputType="text"
                android:textCursorDrawable="@drawable/text_cursor"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true" />

            <com.ikt.main.to.component.MaterialEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:focusableInTouchMode="true"
                android:hint="@string/mandatory_name"
                android:inputType="text"
                android:textCursorDrawable="@drawable/text_cursor"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true" />

            <com.ikt.main.to.component.MaterialEditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:focusableInTouchMode="true"
                android:hint="@string/mandatory_phone_number"
                android:inputType="phone"
                android:textCursorDrawable="@drawable/text_cursor"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true" />

            <com.ikt.main.to.component.MaterialEditText
                android:id="@+id/edtKTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:focusableInTouchMode="true"
                android:hint="@string/identity_no"
                android:inputType="numberSigned"
                android:textCursorDrawable="@drawable/text_cursor"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true" />

            <LinearLayout
                android:id="@+id/llSpin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_spinner">

                <Spinner
                    android:id="@+id/spinSim"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="0dp"
                    android:paddingTop="0dp" />
            </LinearLayout>

            <com.ikt.main.to.component.MaterialEditText
                android:id="@+id/edtSIM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:focusableInTouchMode="true"
                android:hint="@string/license_no"
                android:inputType="numberSigned"
                android:textCursorDrawable="@drawable/text_cursor"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true" />

            <com.ikt.main.to.component.MaterialEditText
                android:id="@+id/edtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/mandatory_password"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/text_cursor"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="false" />

            <CheckBox
                android:id="@+id/cbShowNewPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/show_pwd" />

            <com.ikt.main.to.component.MaterialEditText
                android:id="@+id/edtConfNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/mandatory_conf_pwd"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/text_cursor"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="false" />

            <CheckBox
                android:id="@+id/cbShowConfPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/show_pwd" />


                <Button
                    android:id="@+id/btnAddDriver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_button_dark"
                    android:text="@string/create_driver"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />


                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_button_grey"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>