<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">


            <!--<Button
                android:id="@+id/btnVinsNo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button_dark"
                android:text="@string/put_vins_no"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />-->

        <Button
            android:id="@+id/btnVinsNo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_button_dark"
            android:text="@string/put_vins_no"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/or"
            android:textSize="@dimen/_15ssp"/>

            <Button
                android:id="@+id/btnTripNo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button_dark"
                android:text="@string/put_trip_no_button"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>